OAK-11101 : removed usage of guava ImmutableSet.of()