@@ -48,7 +48,7 @@ import org.jetbrains.annotations.Nullable;
 
 class CugPermissionProvider implements AggregatedPermissionProvider, CugConstants {
 
-    private static final Set<String> READ_PRIVILEGE_NAMES = ImmutableSet.of(
+    private static final Set<String> READ_PRIVILEGE_NAMES = Set.of(
             PrivilegeConstants.JCR_READ,
             PrivilegeConstants.REP_READ_NODES,
             PrivilegeConstants.REP_READ_PROPERTIES
