@@ -63,7 +63,7 @@ public class NodeObserverTest {
         builder.getChildNode("m").getChildNode("n").setChildNode("new").setProperty("p", "3");
         nodeObserver.contentChanged(builder.getNodeState(), CommitInfo.EMPTY);
 
-        assertEquals(ImmutableMap.of("/m/n/new", ImmutableSet.of("p")), nodeObserver.added);
+        assertEquals(ImmutableMap.of("/m/n/new", Set.of("p")), nodeObserver.added);
         assertTrue(nodeObserver.deleted.isEmpty());
         assertTrue(nodeObserver.changed.isEmpty());
         assertTrue(nodeObserver.properties.isEmpty());
@@ -76,7 +76,7 @@ public class NodeObserverTest {
         nodeObserver.contentChanged(builder.getNodeState(), CommitInfo.EMPTY);
 
         assertTrue(nodeObserver.added.isEmpty());
-        assertEquals(ImmutableMap.of("/m/n/o", ImmutableSet.of("q")), nodeObserver.deleted);
+        assertEquals(ImmutableMap.of("/m/n/o", Set.of("q")), nodeObserver.deleted);
         assertTrue(nodeObserver.changed.isEmpty());
         assertTrue(nodeObserver.properties.isEmpty());
     }
@@ -89,7 +89,7 @@ public class NodeObserverTest {
 
         assertTrue(nodeObserver.added.isEmpty());
         assertTrue(nodeObserver.deleted.isEmpty());
-        assertEquals(ImmutableMap.of("/m/n", ImmutableSet.of("p")), nodeObserver.changed);
+        assertEquals(ImmutableMap.of("/m/n", Set.of("p")), nodeObserver.changed);
         assertEquals(ImmutableMap.of("/m/n", ImmutableMap.of("extra", "42")), nodeObserver.properties);
     }
 
