@@ -108,9 +108,9 @@ public final class TestPrincipalProvider implements PrincipalProvider {
         if (principals.equals(TestPrincipals.asMap())) {
             return TestPrincipals.membership(principal.getName());
         } else if (principals.values().contains(principal)) {
-            return ImmutableSet.of(EveryonePrincipal.getInstance());
+            return Set.of(EveryonePrincipal.getInstance());
         } else {
-            return ImmutableSet.of();
+            return Set.of();
         }
     }
 
@@ -128,7 +128,7 @@ public final class TestPrincipalProvider implements PrincipalProvider {
             }
         }
 
-        return ImmutableSet.of();
+        return Set.of();
     }
 
     @NotNull
@@ -212,15 +212,15 @@ public final class TestPrincipalProvider implements PrincipalProvider {
 
         private static Set<Principal> membership(@NotNull String name) {
             if ("a".equals(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance(), gr2, gr3);
+                return Set.of(EveryonePrincipal.getInstance(), gr2, gr3);
             } else if ("ac".equals(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance(), gr3);
+                return Set.of(EveryonePrincipal.getInstance(), gr3);
             } else if (gr2.getName().equals(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance(), gr3);
+                return Set.of(EveryonePrincipal.getInstance(), gr3);
             } else if (principals.containsKey(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance());
+                return Set.of(EveryonePrincipal.getInstance());
             } else {
-                return ImmutableSet.of();
+                return Set.of();
             }
         }
     }
